--- a/index.html
+++ b/index.html
@@ -97,30 +97,37 @@
         <h1 class="section-title">Recent <span>Projects</span></h1>
       </div>
       <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Snack Food Sales System</h1>
-            <h2>A system aimed at street vendors</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+        <a href="https://github.com/iman123afk/penitipansnack">
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Snack Food Sales System</h1>
+              <h2>A system aimed at street vendors</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+                rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non
+                sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            </div>
+            <div class="project-img">
+              <img src="./img/snack.png" alt="img">
+            </div>
           </div>
-          <div class="project-img">
-            <img src="./img/snack.png" alt="img">
+        </a>
+
+        <a
+          href="https://www.figma.com/proto/Ji2DrFc0USPP8hXoHAnIB8/jasa-edit-foto-vektor-dan-wpap-melalui-website?node-id=5-26&viewport=1121%2C124%2C0.12&t=TfTvyTO96hlR0dlI-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=5%3A26">
+          <div class="project-item">
+            <div class="project-info">
+              <h1>UI/UX Prototype</h1>
+              <h2>vector and WPAP editing service website</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+                rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non
+                sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            </div>
+            <div class="project-img">
+              <img src="./img/uiux.png" alt="img">
+            </div>
           </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>UI/UX Prototype</h1>
-            <h2>vector and WPAP editing service website</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/uiux.png" alt="img">
-          </div>
-        </div>
+        </a>
+
         <div class="project-item">
           <div class="project-info">
             <h1>Vector Designer</h1>
